@@ -1,3 +1,9 @@
+2016-07-21  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	Backport r25809 by Hani Benhabiles.
+
+	* nasl/nasl_grammar.y (mylex): Exit on unknown escape sequence error.
+
 2016-07-12  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	Backport r25147 and r25166.
